# cardiax

./: .gitignore  CMakeLists.txt  CMakeLists_installDeps.txt.bak  Doxyfile  README.md  amgx-config.cmake  build.sh  install-guide.txt  install_deps.sh
app/: CMakeLists.txt  bidomain_solver.cpp  coupled_electromech_solver.cpp  elasticity_solver.cpp  electromech_solver.cpp  l2projection_solver.cpp  monodomain_solver.cpp  monoserial.cpp  nonlinearelas_solver.cpp  old_electromech_solver.cpp  poisson_solver.cpp
archive/: petsc_linear_solver.cpp.bak  total_lagrangian_snes.cpp
configs/: AGGREGATION_DILU.json  (+61 more)
helena_src/cardiac/: CMakeLists.txt  bidomain.hpp  bidomain_bath.hpp  bidomain_deformation.cpp  cardiac_cycle.cpp.atual  cardiac_cycle.cpp.jenny  cardiac_cycle.hpp  cardiac_cycle.hpp.shavik  cardiacproblem.hpp  coupled_electromechanic.cpp  coupled_electromechanic.hpp  coupled_purkinje.cpp  coupled_purkinje.hpp  monodomain.cpp  monodomain.hpp  monodomain_deformation.cpp  monodomain_deformation.hpp
helena_src/cardiac/old/: cardiac_cycle.hpp
helena_src/linalg/: CMakeLists.txt  array3.hpp  mat.hpp  matops.hpp  matrixops.hpp  petsc_linear_solver.hpp  petsc_linear_solver_bkp.cpp  petsc_matrix.cpp  spmat.hpp  tensor.cpp  tensor.hpp
helena_src/linalg/backup/: solvers.h  sparse_matrix.cpp
helena_src/linalg/backup/pre-lib-bkp/: saxpy.h  sparse_matrix.cpp  sparse_matrix.hpp  vector.h
helena_src/linalg/configs/: AGGREGATION_LOW_DEG_GS.json  AGGREGATION_MULTI_PAIRWISE.json  AGGREGATION_THRUST_DILU.json  AMG_AGGRREGATION_CG.json  AMG_CLASSICAL_AGGRESSIVE_CHEB_L1_TRUNC.json  AMG_CLASSICAL_AGGRESSIVE_L1.json  AMG_CLASSICAL_AGGRESSIVE_L1_TRUNC.json  AMG_CLASSICAL_CGF.json  AMG_CLASSICAL_L1_AGGRESSIVE_HMIS.json  CHEB_SOLVER_NOPREC.json  CLASSICAL_CG_CYCLE.json  CLASSICAL_F_CYCLE.json  CLASSICAL_W_CYCLE.json  FGMRES_AGGREGATION_DILU.json  FGMRES_AGGREGATION_JACOBI.json  FGMRES_CLASSICAL_AGGRESSIVE_HMIS.json  FGMRES_CLASSICAL_AGGRESSIVE_PMIS.json  FGMRES_NOPREC.json  GMRES_AMG_D2.json  IDRMSYNC_DILU.json  PBICGSTAB_CLASSICAL_JACOBI.json  PBICGSTAB_NOPREC.json  PCGF_CLASSICAL_F_JACOBI.json  PCGF_V.json  PCG_CLASSICAL_F_JACOBI.json  PCG_CLASSICAL_W_JACOBI.json  PCG_F.json  PCG_V.json  V-cheby-aggres-L1-trunc.json  V-cheby-smoother.json  V-cheby_poly-smoother.json
helena_src/linalg/test/: test_matrix.cpp  test_pardiso.cpp
helena_src/mesh/: CMakeLists.txt  CMakeLists.txt.old  box_mesh.hpp  gmshio.cpp  gmshio.hpp  mesh.cpp  mesh.hpp  writer_hdf5.cpp  writer_vtk.cpp
helena_src/nls/: CMakeLists.txt  newton.cpp  newton_ls.hpp  nonlinear_solver.hpp
helena_src/nls/test/: test_simple.cpp
helena_src/odes/: CMakeLists.txt  cellmodel.cpp  cellmodel.hpp  explicit_euler.cpp  implicit_euler.hpp  minimalmodel.hpp  mitchell_schaeffer.cpp  mitchell_schaeffer.hpp  mm_silva.cpp  ode_solver.hpp  odes.h  ord.hpp  ten_tusscher_ta.cpp  timestepper.cpp  torord_land.hpp
helena_src/odes/test/: unit_test_cells.cpp
helena_src/util/: CMakeLists.txt  command_line_args.h  interp.cpp  load_control.cpp  log.hpp  parameters.cpp
helena_src/util/test/: test_parameters.cpp
scripts/vtk/: CMakeLists.txt  convertFibersCell2Point.cpp  diffdispl.cpp  helper.cpp  helper.h  vtu2msh.cpp  writeAPDvtu.cpp  writeFibersVtu.cpp  writePartMeshVtu.cpp
src/cardiac/: CMakeLists.txt  bidomain.cpp  bidomain.hpp  bidomain_bath.cpp  bidomain_deformation.hpp  cardiac_cycle copy.cpp  cardiac_cycle copy.hpp  cardiac_cycle.cpp  cardiac_cycle.cpp.shavik  cardiac_cycle.hpp  cardiacproblem.cpp  cardiacproblem.hpp  coupled_electromechanic.cpp  eikonal.cpp  eikonal.hpp  monodomain.cpp  monodomain_purkinje.cpp  monodomain_purkinje.hpp  stimulus.cpp
src/cardiac/old/: cardiac_cycle.cpp  cardiac_cycle.cpp.atual
src/fem/: CMakeLists.txt  element.hpp  fe.cpp  fe.hpp  fedata.hpp  fem.h  fetools.hpp  function.hpp  hermite_fespace.cpp  mapping.hpp  mixed_fe.hpp  mixed_fespace.hpp  projection.hpp  quadrature.cpp
src/fem/test/: test_quadrature.cpp
src/mesh/: CMakeLists.txt  graph_coloring.cpp  mesh.cpp  purkinje_mesh.cpp  writer.cpp  writer_hdf5.hpp  writer_vtk.hpp
src/mesh/test/: test_hdf5.cpp
src/odes/: CMakeLists.txt  cellmodel.cpp  cells.cpp  cells.hpp  fitz_hugh_nagumo.hpp  implicit_ode_solver.cpp  implicit_ode_solver.hpp  kerkoff2003.cpp  luo_rudy.cpp  luo_rudy.hpp  minimalmodel.cpp  mm_silva.hpp  mv.hpp  mynash.cpp  mynash.hpp  nash_panfilov.cpp  nash_panfilov.hpp  ode_solver.cpp  odes.h  plotscript.plt  rice_ord.cpp  rice_ten_tusscher.hpp  runge_kutta4.cpp  runge_kutta4.hpp  simple_ode.cpp  simple_ode.hpp  ten_tusscher2004.hpp  ten_tusscher2006.cpp
src/odes/test/: test_cellmodel.cpp  test_cells.cpp  unit_test_ode_solver.cpp
src/pdes/: CMakeLists.txt  CMakeLists.txt.old  backup.txt  elasticity.cpp  elasticity.hpp  laplace.cpp  laplace.hpp  mech_utils.cpp  mech_utils.hpp  nonlinear_elasticity.cpp  nonlinear_elasticity.hpp  poisson.hpp  total_lagrangian.cpp  updated_lagrangian copy.cpp  updated_lagrangian copy.hpp  updated_lagrangian.cpp  updated_lagrangian.cpp.psia  updated_lagrangian.cpp.sa  updated_lagrangian.hpp  updated_lagrangian_stp.cpp  updated_lagrangian_stp.hpp
src/pdes/materials/: holzapfel_ogden.cpp  holzapfel_ogden.hpp  hyperelastic_material.cpp  hyperelastic_material.hpp  incompressible_material.cpp  lafortune.cpp  nearly_incompressible_mooney_rivlin.cpp  nearly_incompressible_mooney_rivlin.hpp  neo_hookean.cpp  neo_hookean.hpp  plane_stress_neo_hookean.cpp  plane_stress_neo_hookean.hpp
src/util/: CMakeLists.txt  CMakeLists.txt.old  input_file.cpp  interp.h  log.cpp  parameter.cpp  time_parameters.cpp  time_parameters.hpp  timer.cpp  timer.hpp  util.cpp
src_old/fem/: CMakeLists.txt  fedata.cpp  fespace.cpp  fespace.hpp  mixed_fe.cpp  mixed_fespace.cpp  projection.cpp
src_old/linalg/: CMakeLists.txt  cg.cpp  cg.hpp  linalg.h  petsc_linear_solver.cpp  petsc_matrix.cpp  petsc_vector.cpp  vec.hpp  vecops.hpp  vector.hpp
src_old/linalg/test/: test_cg.cpp  test_saxpy.cpp  test_sparse_matrix.cpp  test_vec.cpp
src_old/nls/: CMakeLists.txt  bfgs.cpp  newton_ls.cpp  nonlinear_problem.hpp  nonlinear_solver.cpp
(+254 files in other folders)
